@@ -4,6 +4,10 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2020-10-16
+ * Updated on_create, on_delete, and on_update to each return a reference to the object as their second parameter in wing.vue.js.
+ * Removed vestigial self.id from wing.vue.js wing.object. 
+
 2020-10-15
  * Small refinements to wing-pagination columns.
 
